#1 popup 페이지 수정
- custom-element 이름 규칙 잘못 설정됨 정정

--- a/popup.html
+++ b/popup.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/icons/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chrome Extensioin + Lit + TS + Vite App - Popup</title>
+    <title>kurly App</title>
     <link rel="stylesheet" href="./src/index.css" />
   </head>
   <body>
-    <popup>
-      <h1>Vite + Lit</h1>
-    </popup>
+    <popup-main></popup-main>
     <script type="module" src="./src/popup/index.ts"></script>
   </body>
 </html>
