--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="fantasy">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/icons/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>kurly App</title>
     <link rel="stylesheet" href="./src/index.css" />
+    <style>
+      body {
+        background-color: #fff;
+      }
+    </style>
   </head>
   <body>
     <popup-main></popup-main>
